--- a/calc.html
+++ b/calc.html
@@ -1,145 +1,146 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/calc.css">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="css/calc.css" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.2/font/bootstrap-icons.min.css" />
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous" />
     <title>Document</title>
-</head>
-<nav class="navbar navbar-expand-lg bg-black border-bottom border-light">
+  </head>
+  <nav class="navbar navbar-expand-lg bg-black border-bottom border-light">
     <div class="container-fluid text-light">
-      <a class="navbar-brand text-light" href="#"><h4>Tristan <span style="color: #93DEFF;">Calculator</span></h4></a>
+      <a class="navbar-brand text-light" href="#"
+        ><h4>Tristan <span style="color: #93deff">Calculator</span></h4></a
+      >
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
         <div class="navbar-nav nav-top">
-          <a class="nav-link  text-light" aria-current="page" href="index.html">Home</a>
+          <a class="nav-link text-light" aria-current="page" href="index.html">Home</a>
           <a class="nav-link text-light" href="#">Features</a>
           <a class="nav-link text-light" href="#">Pricing</a>
         </div>
       </div>
     </div>
   </nav>
-<body class="bg-dark text-white">
+  <body class="bg-dark text-white">
     <div class="container text-center mt-5">
       <!-- <div class="explanation text-start">
         BMI is a measurement of a person's leanness or corpulence based on their height and weight, and is intended to quantify tissue mass. It is widely used as a general indicator of whether a person has a healthy body weight for their height. Specifically, the value obtained from the calculation of BMI is used to categorize whether a person is underweight, normal weight, overweight, or obese depending on what range the value falls between. These ranges of BMI vary based on factors such as region and age, and are sometimes further divided into subcategories such as severely underweight or very severely obese. Being overweight or underweight can have significant health effects, so while BMI is an imperfect measure of healthy body weight, it is a useful indicator of whether any additional testing or action is required. Refer to the table below to see the different categories based on BMI that are used by the calculator.
       </div> -->
-        <div class="row justify-content-start px-4">
+      <div class="row justify-content-start px-4">
+        <!-- bagian kiri  -->
+        <div class="col-5 bgblack rounded-4 py-4">
+          <div class="row justify-content-start px-3">
+            <h4 class="text-start">Kalkulator</h4>
+            <hr />
+          </div>
 
-      <!-- bagian kiri  -->
-          <div class="col-4 px-4">
-
-            <div class="row justify-content-start">
-              <h4 class="text-start">Kalkulator</h4><hr>
+          <!-- kiri paling atas -->
+          <div class="row justify-content-start mt-2">
+            <div class="col-5 text-end">
+              <h5>Berat:</h5>
             </div>
 
-    <!-- kiri paling atas -->
-            <div class="row justify-content-start mt-2">
-              <div class="col-5 text-end">
-                <h5>Berat: </h5>
+            <div class="col-6">
+              <div class="input-group mb-3">
+                <span class="input-group-text inputs" id="basic-addon1"><i class="bi bi-pencil-fill"></i></span>
+                <input type="text" class="form-control inputs numbers" placeholder="kg" aria-label="Username" aria-describedby="basic-addon1" />
               </div>
+            </div>
+            <!-- end row seblah kiri bagian paling atas  -->
+          </div>
 
-              <div class="col-6">
-                <div class="input-group mb-3">
-                  <span class="input-group-text inputs" id="basic-addon1">@</span>
-                  <input type="text" class="form-control inputs" placeholder="Username" aria-label="Username" aria-describedby="basic-addon1">
-                </div>
+          <!-- kiri tengah  -->
+          <div class="row justify-content-start">
+            <div class="col-5 text-end">
+              <h5>Tinggi:</h5>
+            </div>
+
+            <div class="col-6">
+              <div class="input-group mb-3">
+                <span class="input-group-text inputs" id="basic-addon1"><i class="bi bi-pencil-fill"></i></span>
+                <input type="text" class="form-control inputs numbers" placeholder="cm" aria-label="Username" aria-describedby="basic-addon1" />
               </div>
-<!-- end row seblah kiri bagian paling atas  -->
             </div>
 
-      <!-- kiri tengah  -->
-            <div class="row justify-content-start">
-                <div class="col-5 text-end">
-                  <h5>Tinggi:</h5>
-                </div>
+            <!-- end row kiri tengah  -->
+          </div>
 
-                <div class="col-6">
-                  <div class="input-group mb-3">
-                    <span class="input-group-text inputs" id="basic-addon1">@</span>
-                    <input type="text" class="form-control inputs" placeholder="Username" aria-label="Username" aria-describedby="basic-addon1">
-                  </div>
-                </div>
-
-          <!-- end row kiri tengah  -->
+          <!-- kiri tengah  -->
+          <div class="row justify-content-start">
+            <div class="col-5 text-end">
+              <h5>Usia:</h5>
             </div>
 
-      <!-- kiri tengah  -->
-            <div class="row justify-content-start">
-                <div class="col-5 text-end">
-                  <h5>Usia:</h5>
-                </div>
-
-                <div class="col-6">
-                  <div class="input-group mb-3">
-                    <span class="input-group-text inputs" id="basic-addon1">@</span>
-                    <input type="text" class="form-control inputs" placeholder="Username" aria-label="Username" aria-describedby="basic-addon1">
-                  </div>
-                </div>
-
-          <!-- end row kiri tengah  -->
+            <div class="col-6">
+              <div class="input-group mb-3">
+                <span class="input-group-text inputs" id="basic-addon1"><i class="bi bi-pencil-fill"></i></span>
+                <input type="text" class="form-control inputs numbers" placeholder="tahun" aria-label="Username" aria-describedby="basic-addon1" />
+              </div>
             </div>
 
-      <!-- kiri bawah  -->
-            <div class="row justify-content-start">
-                <div class="col-5 text-end">
-                  <h5>Jenis Kelamin:</h5>
-                </div>
+            <!-- end row kiri tengah  -->
+          </div>
 
-                <div class="col-6 ps-0">
-                  <div class="form-check form-check-inline">
-                    <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault1">
-                    <label class="form-check-label" for="flexRadioDefault1">
-                      Pria
-                    </label>
-                  </div>
-                  <div class="form-check form-check-inline">
-                    <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault2" checked>
-                    <label class="form-check-label" for="flexRadioDefault2">
-                      Wanita
-                    </label>
-                  </div>
-                </div>
-
-          <!-- end row kiri bawah  -->
+          <!-- kiri bawah  -->
+          <div class="row justify-content-start">
+            <div class="col-5 text-end">
+              <h5>Jenis Kelamin:</h5>
             </div>
 
-      <!-- kiri bawah  -->
-            <div class="row justify-content-start mt-3">
+            <div class="col-6 ps-0">
+              <div class="form-check form-check-inline">
+                <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault1" />
+                <label class="form-check-label" for="flexRadioDefault1"> Pria </label>
+              </div>
+              <div class="form-check form-check-inline">
+                <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault2" checked />
+                <label class="form-check-label" for="flexRadioDefault2"> Wanita </label>
+              </div>
+            </div>
 
+            <!-- end row kiri bawah  -->
+          </div>
 
-              <div class="col-5">
-                <!-- INI TINGGALING KOSONG AJA
+          <!-- kiri bawah  -->
+          <div class="row justify-content-start mt-3">
+            <div class="col-5">
+              <!-- INI TINGGALING KOSONG AJA
                 BIAR MENJOROK KEDALAM -->
-              </div>
-
-              <div class="col-6 text-start">
-                <button class="btn btn-light me-4 fw-medium">Reset</button>
-                <button class="btn btn-light fw-medium">Hitung</button>
-              </div>
-
-          <!-- end row kiri bawah  -->
             </div>
 
+            <div class="col-6 text-start">
+              <button class="btn btn-light me-4 fw-medium">Reset</button>
+              <button class="btn btn-light fw-medium" id="hitung">Hitung</button>
+            </div>
 
-        <!-- end bagian kiri -->
+            <!-- end row kiri bawah  -->
           </div>
 
-          <div class="col-6 text-start">
-            BMI is a measurement of a person's leanness or corpulence based on their height and weight, and is intended to quantify tissue mass. 
-            It is widely used as a general indicator of whether a person has a healthy body weight for their height. 
-            Specifically, the value obtained from the calculation of BMI is used to categorize whether a person is underweight, normal weight, overweight, or obese depending on what range the value falls between. 
-            These ranges of BMI vary based on factors such as region and age, and are sometimes further divided into subcategories such as severely underweight or very severely obese. 
-            Being overweight or underweight can have significant health effects, so while BMI is an imperfect measure of healthy body weight, it is a useful indicator of whether any additional testing or action is required. 
-            Refer to the table below to see the different categories based on BMI that are used by the calculator.
-
-          </div>
+          <!-- end bagian kiri -->
         </div>
 
+        <!-- bagian kanan -->
+        <div class="col-6 text-start py-3">
+          <h4 id="changed">Fungsi Kalkulator</h4>
+          <hr />
+
+          <p>
+            BMI atau Body Mass Index adalah metode sederhana untuk menilai apakah berat badan Anda sesuai dengan tinggi badan. Silakan masukkan berat badan Anda dalam kilogram dan tinggi badan Anda dalam centimeter pada formulir. Setelah
+            itu, klik "Hitung" untuk mendapatkan nilai BMI Anda. Hasilnya akan memberi Anda gambaran umum tentang kategori berat badan Anda, apakah itu berat badan kurang, normal, kelebihan berat badan, atau obesitas.
+          </p>
+
+          <p>Jika Anda memiliki pertanyaan atau kekhawatiran lebih lanjut tentang kesehatan Anda, kami sarankan untuk berkonsultasi dengan profesional kesehatan.</p>
+        </div>
+
+        <!-- end dari row -->
+      </div>
     </div>
-</body>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
+  </body>
+  <script src="js/calc.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 </html>
